# sliding_average_tests

./: README.md  pyproject.toml
python_sliding_average/: __init__.py  calculate_sliding_average.py  create_random_dataset.py
