[tool.poetry]
name = "sliding_average_tests"
version = "0.1.0"
description = ""
authors = ["mrtolkien <gary.mialaret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
